added text and colors

--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-<header>
-<nav>
+    <header>
+        <nav>
+            <h1>Secret Family Recipes</h1>
+            <a href="">Home</a>
+            <a href="about.html">About</a>
+            <a href="">Login</a>
+            <a href="">Register</a>
+        </nav>
+    </header>
+<div>
+    <h2>Secret Family Recipes</h2>
+    <p>Ever wanted to keep your generational culinary recipes for yourself and others to try? Well now you can!</p>
+</div>
 
-</nav>
-</header>
 
+<footer>
+
+</footer>
 </body>
+</html>
