--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
             <h1>Secret Family Recipes</h1>
             <a href="">Home</a>
             <a href="about.html">About</a>
+            <div class="dropdown">
+                <button class="dropbtn">Recipes 
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div> 
             <a href="">Login</a>
             <a href="">Register</a>
         </nav>
@@ -20,7 +30,6 @@
     <h2>Secret Family Recipes</h2>
     <p>Ever wanted to keep your generational culinary recipes for yourself and others to try? Well now you can!</p>
 </div>
-
 
 <footer>
 
