--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="board">
             <h1>Secret Family Recipes</h1>
             <a href="">Home</a>
             <a href="about.html">About</a>
