dont remember but it had to do with html

--- a/about.html
+++ b/about.html
@@ -10,10 +10,17 @@
     <header>
         <nav>
             <h1>Secret Family Recipes</h1>
-            <a href="">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="">Login</a>
             <a href="">Register</a>
         </nav>
     </header>
+<h2>The Developers!</h2>
+<div>
+    <section>
+
+    </section>
+</div>
 </body>
+</html>
