--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <nav class="board">
+        <nav class="links">
             <h1>Secret Family Recipes</h1>
-            <a href="">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <div class="dropdown">
                 <button class="dropbtn">Recipes 
