--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#">Fancy</a>
+                  <a href="#">Casual</a>
+                  <a href="#">Less for More</a>
                 </div>
-              </div> 
-            <a href="">Login</a>
-            <a href="">Register</a>
+              </div>
+              <section id="account">
+                <a href="">Login</a>
+                <a href="">Register</a>
+              </section> 
         </nav>
     </header>
 <div>
