added images to about page

--- a/about.html
+++ b/about.html
@@ -18,8 +18,17 @@
     </header>
 <h2>The Developers!</h2>
 <div>
-    <section>
-
+    <section id="Henry">
+        <img src="img/WIN_20170226_23_15_17_Pro.jpg">
+    </section>
+    <section id="nicholas">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHZ7J02-18161f75373b-512">
+    </section>
+    <section id="stephanie">    
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012R4ECTUL-f9e8c93feaa5-512">
+    </section>
+    <section id="francisco">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY5GP6-8986b6f933c4-512">
     </section>
 </div>
 </body>
