copied home nav to about page

--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
     </header>
 <h2>The Developers!</h2>
 <div>
+    <section id="Chris">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512">
+    </section>
     <section id="Henry">
         <img src="img/WIN_20170226_23_15_17_Pro.jpg">
     </section>
