i think I improved the nav

--- a/about.html
+++ b/about.html
@@ -8,16 +8,26 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="links">
             <h1>Secret Family Recipes</h1>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="">Login</a>
-            <a href="">Register</a>
+            <div class="dropdown">
+                <button class="dropbtn">Recipes 
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">Fancy</a>
+                  <a href="#">Casual</a>
+                  <a href="#">Less for More</a>
+                </div>
+              </div>
+                <a href="">Login</a>
+                <a href="">Register</a>
         </nav>
     </header>
-<h2>The Developers!</h2>
 <div>
+    <h2>The Developers!</h2>
     <section id="Chris">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512">
     </section>
