--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <nav class="links">
-            <h1>Secret Family Recipes</h1>
+            <div id="title">
+                <h1 id="website">Secret Family Recipes</h1>
+            </div>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <div class="dropdown">
