fixed nav finally, onto pictures now

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="links">
-            <h1>Secret Family Recipes</h1>
+            <h1 style="height: 0px; width: 75%;">Secret Family Recipes</h1>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <div class="dropdown">
@@ -28,6 +28,7 @@
     </header>
 <div>
     <h2>The Developers!</h2>
+    <div class="Devs">
     <section id="Chris">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512">
     </section>
@@ -43,6 +44,7 @@
     <section id="francisco">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY5GP6-8986b6f933c4-512">
     </section>
+    </div>
 </div>
 </body>
 </html>
