--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="links">
-            <h1 style="height: 0px; width: 75%;">Secret Family Recipes</h1>
+            <h1>Secret Family Recipes</h1>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <div class="dropdown">
