--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="links">
-                <h1 id="website">Secret Family Recipes</h1>
+                <h1>Secret Family Recipes</h1>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <div class="dropdown">
