fixed nav bar, onto about page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,6 @@
             <a href="about.html">About</a>
             <div class="dropdown">
                 <button class="dropbtn">Recipes 
-                  <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
                   <a href="#">Fancy</a>
@@ -24,6 +23,11 @@
               </div>
                 <a href="">Login</a>
                 <a href="">Register</a>
+                <div class="search-container">
+                    <form action="/action_page.php">
+                      <input type="text" placeholder="Search.." name="search">
+                    </form>
+                  </div>
         </nav>
     </header>
 <div>
