--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
-</head>
 <body>
     <header>
         <nav class="links">
@@ -24,6 +23,11 @@
               </div>
                 <a href="">Login</a>
                 <a href="">Register</a>
+            <div class="search-container">
+                <form action="/action_page.php">
+                    <input type="text" placeholder="Search.." name="search">
+                    </form>
+                  </div>
         </nav>
     </header>
 <div>
