fixed home screen and is RD ready, I think

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -35,18 +37,23 @@
     <div class="Devs">
     <section id="Chris">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512">
+        <p id="below">This is Chris, our TL!</p>
     </section>
     <section id="Henry">
-        <img src="img/WIN_20170226_23_15_17_Pro.jpg">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W013NPAHM5M-62335661318b-512">
+        <p id="below">This is Henry, our WD!</p>
     </section>
-    <section id="nicholas">
+    <section id="Nicholas">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012JHZ7J02-18161f75373b-512">
+        <p id="below">This is Nicholas, one of our React 1s!</p>
     </section>
-    <section id="stephanie">    
+    <section id="Stephanie">    
         <img src="https://ca.slack-edge.com/ESZCHB482-W012R4ECTUL-f9e8c93feaa5-512">
+        <p id="below">This is Stephanie, one of our React 1s!</p>
     </section>
-    <section id="francisco">
+    <section id="Francisco">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY5GP6-8986b6f933c4-512">
+        <p id="below">This is Francisco, one of our React 2s!</p>
     </section>
     </div>
 </div>
