--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+  </head>
 <body>
     <header>
         <nav class="links">
@@ -12,8 +15,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <div class="dropdown">
-                <button class="dropbtn">Recipes 
-                  <i class="fa fa-caret-down"></i>
+                <button class="dropbtn">Recipes
                 </button>
                 <div class="dropdown-content">
                   <a href="#">Fancy</a>
@@ -25,18 +27,46 @@
                 <a href="">Register</a>
             <div class="search-container">
                 <form action="/action_page.php">
-                    <input type="text" placeholder="Search.." name="search">
+                    <input type="text" placeholder="Search..." name="search">
                     </form>
                   </div>
         </nav>
     </header>
 <div>
-    <h2>Secret Family Recipes</h2>
-    <p>Ever wanted to keep your generational culinary recipes for yourself and others to try? Well now you can!</p>
+  <nav class="sections">
+    <h3>Section 1</h3>
+    <h3>Section 2</h3>
+    <h3>Section 3</h3>
+    <h3>Section 4</h3>
+  </nav>
+</div>
+<div class="info">
+  <section class="sidebar">
+  <a href="#" class="bruh"><h3>Section 1</h3></a>
+  <a href="#" class="bruh"><h3>Section 2</h3></a>
+  <a href="#" class="bruh"><h3>Section 3</h3></a>
+  <a href="#" class="bruh"><h3>Section 4</h3></a>
+  <a href="#" class="bruh"><h3>Section 5</h3></a>
+  <a href="#" class="bruh"><h3>Section 6</h3></a>
+  <a href="#" class="bruh"><h3>Section 7</h3></a>
+  <a href="#" class="bruh"><h3>Section 8</h3></a>
+</section>
+<div class="midimage">
+  <section>
+    <img id="kitchen" src="https://previews.123rf.com/images/dolgachov/dolgachov1802/dolgachov180201948/96033606-group-of-people-eating-chicken-for-dinner.jpg" alt="various plates with pasta, chicken, fruits and veggies laid on top of a wooden table with an aerial view of people eating or taking a portion of the food on the table">
+  </section>
+  <section id="middle">
+  <h2>Secret Family Recipes</h2>
+  <p>Ever wanted to keep your generational culinary recipes for yourself and others to try? Well now you can!</p>
+</section>
+</div>
+  
 </div>
 
-<footer>
+</div>
+</div>
+<!-- <footer>
 
-</footer>
+</footer> -->
 </body>
 </html>
