added hyperlink feature to the sections

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
     </header>
 <div>
   <nav class="sections">
-    <h3>Section 1</h3>
-    <h3>Section 2</h3>
-    <h3>Section 3</h3>
-    <h3>Section 4</h3>
+    <a href="#"><h3>Section 1</h3></a>
+    <a href="#"><h3>Section 2</h3></a>
+    <a href="#"><h3>Section 3</h3></a>
+    <a href="#"><h3>Section 4</h3></a>
   </nav>
 </div>
 <div class="info">
   <section class="sidebar">
-  <a href="#" class="bruh"><h3>Section 1</h3></a>
-  <a href="#" class="bruh"><h3>Section 2</h3></a>
-  <a href="#" class="bruh"><h3>Section 3</h3></a>
-  <a href="#" class="bruh"><h3>Section 4</h3></a>
-  <a href="#" class="bruh"><h3>Section 5</h3></a>
-  <a href="#" class="bruh"><h3>Section 6</h3></a>
-  <a href="#" class="bruh"><h3>Section 7</h3></a>
-  <a href="#" class="bruh"><h3>Section 8</h3></a>
+  <a href="#"><h3>Section 1</h3></a>
+  <a href="#"><h3>Section 2</h3></a>
+  <a href="#"><h3>Section 3</h3></a>
+  <a href="#"><h3>Section 4</h3></a>
+  <a href="#"><h3>Section 5</h3></a>
+  <a href="#"><h3>Section 6</h3></a>
+  <a href="#"><h3>Section 7</h3></a>
+  <a href="#"><h3>Section 8</h3></a>
 </section>
 <div class="midimage">
   <section>
