fixed 500px responsive

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/08c7e77726.js"></script>
 </head>
 <body>
     <header>
@@ -38,22 +39,62 @@
     <section id="Chris">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512">
         <p id="below">This is Chris, our TL!</p>
+            <a href="https://github.com/cladams0203">
+                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/cladams0203/">
+                <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/ChrisAd55717923">
+                <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+            </a>
     </section>
     <section id="Henry">
         <img src="https://ca.slack-edge.com/ESZCHB482-W013NPAHM5M-62335661318b-512">
-        <p id="below">This is Henry, our WD!</p>
+        <p id="below">This is Henry, our WD!</p> 
+            <a href="https://github.com/HenryRDavis">
+                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/henry-davis-3536501a9/">
+                <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/Rainfallsprings">
+                <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/rainfallsprings/">
+                <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            </a>
     </section>
     <section id="Nicholas">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012JHZ7J02-18161f75373b-512">
-        <p id="below">This is Nicholas, one of our React 1s!</p>
+        <p id="below">This is Nicholas, one of our React 1s!</p> 
+            <a href="https://github.com/niko831">
+                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/nicholas-nobida-pedrano-2923321a8/">
+                <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.facebook.com/niko.nobida">
+                <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/niko831/">
+                <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            </a>
     </section>
     <section id="Stephanie">    
         <img src="https://ca.slack-edge.com/ESZCHB482-W012R4ECTUL-f9e8c93feaa5-512">
-        <p id="below">This is Stephanie, one of our React 1s!</p>
+        <p id="below">This is Stephanie, one of our React 1s!</p> 
+            <a href="https://github.com/stephaniegatt">
+            <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a> 
     </section>
     <section id="Francisco">
         <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY5GP6-8986b6f933c4-512">
-        <p id="below">This is Francisco, one of our React 2s!</p>
+        <p id="below">This is Francisco, one of our React 2s!</p> 
+            <a href="http://github.com/shighetari">
+                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+           </a>
+           </div>
     </section>
     </div>
 </div>
