--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 </div>
 <div class="info">
   <section class="sidebar">
-  <a href="#"><h3>Section 1</h3></a>
-  <a href="#"><h3>Section 2</h3></a>
-  <a href="#"><h3>Section 3</h3></a>
-  <a href="#"><h3>Section 4</h3></a>
-  <a href="#"><h3>Section 5</h3></a>
-  <a href="#"><h3>Section 6</h3></a>
-  <a href="#"><h3>Section 7</h3></a>
-  <a href="#"><h3>Section 8</h3></a>
+  <a href="#"><h3 id="sides">Section 1</h3></a>
+  <a href="#"><h3 id="sides">Section 2</h3></a>
+  <a href="#"><h3 id="sides">Section 3</h3></a>
+  <a href="#"><h3 id="sides">Section 4</h3></a>
+  <a href="#"><h3 id="sides">Section 5</h3></a>
+  <a href="#"><h3 id="sides">Section 6</h3></a>
+  <a href="#"><h3 id="sides">Section 7</h3></a>
+  <a href="#"><h3 id="sides">Section 8</h3></a>
 </section>
 <div class="midimage">
   <section>
