--- a/index.html
+++ b/index.html
@@ -34,22 +34,23 @@
     </header>
 <div>
   <nav class="sections">
-    <a href="#"><h3>Section 1</h3></a>
-    <a href="#"><h3>Section 2</h3></a>
-    <a href="#"><h3>Section 3</h3></a>
-    <a href="#"><h3>Section 4</h3></a>
+    <a href="#"><h3>Breakfast</h3></a>
+    <a href="#"><h3>Appetizers</h3></a>
+    <a href="#"><h3>Dinner</h3></a>
+    <a href="#"><h3>Dessert</h3></a>
   </nav>
 </div>
 <div class="info">
   <section class="sidebar">
-  <a href="#"><h3 id="sides">Section 1</h3></a>
-  <a href="#"><h3 id="sides">Section 2</h3></a>
-  <a href="#"><h3 id="sides">Section 3</h3></a>
-  <a href="#"><h3 id="sides">Section 4</h3></a>
-  <a href="#"><h3 id="sides">Section 5</h3></a>
-  <a href="#"><h3 id="sides">Section 6</h3></a>
-  <a href="#"><h3 id="sides">Section 7</h3></a>
-  <a href="#"><h3 id="sides">Section 8</h3></a>
+    <h2>Styles</h2>
+  <a href="#"><h3 id="sides">Philippines</h3></a>
+  <a href="#"><h3 id="sides">Italian</h3></a>
+  <a href="#"><h3 id="sides">Indian</h3></a>
+  <a href="#"><h3 id="sides">Mexican</h3></a>
+  <a href="#"><h3 id="sides">Korean</h3></a>
+  <a href="#"><h3 id="sides">Moroccan</h3></a>
+  <a href="#"><h3 id="sides">Thai</h3></a>
+  <a href="#"><h3 id="sides">Swedish</h3></a>
 </section>
 <div class="midimage">
   <section>
