--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
 <div class="info">
   <section class="sidebar">
-    <h2>Styles</h2>
+    <h2>Cuisines</h2>
   <a href="#"><h3 id="sides">Philippines</h3></a>
   <a href="#"><h3 id="sides">Italian</h3></a>
   <a href="#"><h3 id="sides">Indian</h3></a>
