disables dropdown feature

--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
             <h1>Secret Family Recipes</h1>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <div class="dropdown">
+            <a href="about.html">Recipes</a>
+            <!-- <div class="dropdown">
                 <button class="dropbtn">Recipes 
                 </button>
                 <div class="dropdown-content">
@@ -23,7 +24,7 @@
                   <a href="#">Casual</a>
                   <a href="#">Less for More</a>
                 </div>
-              </div>
+              </div> -->
                 <a href="">Login</a>
                 <a href="">Register</a>
                 <div class="search-container">
@@ -37,7 +38,7 @@
     <h2>The Developers!</h2>
     <div class="Devs">
     <section id="Chris">
-        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512" alt="face of a caucasian male with brown/blonde hair smiling with a blurred background">
         <p id="below">This is Chris, our TL!</p>
             <a href="https://github.com/cladams0203">
                 <i class="fa fa-github fa-2x" aria-hidden="true"></i>
