--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <h1>Secret Family Recipes</h1>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <div class="dropdown">
+            <a href="#">Recipes</a>
+            <!-- <div class="dropdown">
                 <button class="dropbtn">Recipes
                 </button>
                 <div class="dropdown-content">
@@ -22,9 +23,9 @@
                   <a href="#">Casual</a>
                   <a href="#">Less for More</a>
                 </div>
-              </div>
-                <a href="">Login</a>
-                <a href="">Register</a>
+              </div> -->
+                <a href="#">Login</a>
+                <a href="#">Register</a>
             <div class="search-container">
                 <form action="/action_page.php">
                     <input type="text" placeholder="Search..." name="search">
