--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>Secret Family Recipes</h1>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Food</a>
+            <a href="#">Recipes</a>
             <!-- <div class="dropdown">
                 <button class="dropbtn">Recipes
                 </button>
