took out sidebar

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     <a href="#"><h3>Dessert</h3></a>
   </nav>
 </div>
-<div class="info">
-  <section class="sidebar">
+  <!-- <section class="sidebar">
     <h2>Cuisines</h2>
   <a href="#"><h3 id="sides">Philippines</h3></a>
   <a href="#"><h3 id="sides">Italian</h3></a>
@@ -52,23 +51,17 @@
   <a href="#"><h3 id="sides">Moroccan</h3></a>
   <a href="#"><h3 id="sides">Thai</h3></a>
   <a href="#"><h3 id="sides">Swedish</h3></a>
-</section>
-<div class="midimage">
-  <section>
+</section> -->
+<div class="midmid">
+<section class="midimage">
     <img id="kitchen" src="https://previews.123rf.com/images/dolgachov/dolgachov1802/dolgachov180201948/96033606-group-of-people-eating-chicken-for-dinner.jpg" alt="various plates with pasta, chicken, fruits and veggies laid on top of a wooden table with an aerial view of people eating or taking a portion of the food on the table">
-  </section>
-  <section id="middle">
+</section>
+    <section id="middle">
   <h2>Secret Family Recipes</h2>
   <p>Ever wanted to keep your generational culinary recipes for yourself and others to try? Well now you can!</p>
 </section>
 </div>
-  
-</div>
-
 </div>
 </div>
-<!-- <footer>
-
-</footer> -->
 </body>
 </html>
