added description of product

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 </section>
     <section id="middle">
   <h2>Secret Family Recipes</h2>
-  <p>Ever wanted to keep your generational culinary recipes for yourself and others to try? Well now you can!</p>
+  <p>Anyone can go out and buy a cookbook these days, but I want a place to store all my secret family recipes, handed down from generation to generation.
+    The little cards my grandma wrote the recipes on in her beautiful cursive are getting lost or are hard to read. I need somewhere secure to keep my recipes with me at all times!
+    </p>
 </section>
 </div>
 </div>
