added more accessibility features

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
     <header>
         <nav class="links">
             <h1>Secret Family Recipes</h1>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="about.html">Recipes</a>
+            <a aria-label="Home Page" href="index.html">Home</a>
+            <a aria-label="About Page that displays the developers" href="about.html">About</a>
+            <a aria-label="Recipes Page" href="about.html">Recipes</a>
             <!-- <div class="dropdown">
                 <button class="dropbtn">Recipes 
                 </button>
@@ -28,8 +28,9 @@
                 <a href="">Login</a>
                 <a href="">Register</a>
                 <div class="search-container">
-                    <form action="/action_page.php">
-                      <input type="text" placeholder="Search.." name="search">
+                    <form aria-label="search bar" action="/action_page.php">
+                      <input id="searching" type="text" alt="type out things that you want to look up" placeholder="Search.." name="search">
+                      <label for="searching">Type in here to search.</label>
                     </form>
                   </div>
         </nav>
@@ -38,61 +39,61 @@
     <h2>The Developers!</h2>
     <div class="Devs">
     <section id="Chris">
-        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512" alt="face of a caucasian male with brown/blonde hair smiling with a blurred background">
-        <p id="below">This is Chris, our TL!</p>
-            <a href="https://github.com/cladams0203">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHP414J-c7036a85bd5f-512" alt="face of a caucasian male named Chris with brown/blonde hair smiling with a blurred background.">
+        <p class="belowImage">This is Chris, our TL!</p>
+            <a aria-label="Link that sends you to Chris's github page" href="https://github.com/cladams0203">
                 <i class="fa fa-github fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://www.linkedin.com/in/cladams0203/">
+            <a aria-label="Link that'll sends you to Chris's LinkedIn page" href="https://www.linkedin.com/in/cladams0203/">
                 <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/ChrisAd55717923">
+            <a aria-label="Link that'll sends you to Chris's twitter page" href="https://twitter.com/ChrisAd55717923">
                 <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
             </a>
     </section>
     <section id="Henry">
-        <img src="https://ca.slack-edge.com/ESZCHB482-W013NPAHM5M-62335661318b-512">
-        <p id="below">This is Henry, our WD!</p> 
-            <a href="https://github.com/HenryRDavis">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W013NPAHM5M-62335661318b-512" alt="face of a young adult named Henry with shaggy hair black, glasses and a smile.">
+        <p class="belowImage">This is Henry, our WD!</p> 
+            <a aria-label="Link that sends you to Henry's github page" href="https://github.com/HenryRDavis">
                 <i class="fa fa-github fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://www.linkedin.com/in/henry-davis-3536501a9/">
+            <a aria-label="Link that'll sends you to Henry's LinkedIn page" href="https://www.linkedin.com/in/henry-davis-3536501a9/">
                 <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/Rainfallsprings">
+            <a aria-label="Link that'll sends you to Henry's twitter page" href="https://twitter.com/Rainfallsprings">
                 <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/rainfallsprings/">
+            <a aria-label="Link that'll sends you to Henry's instagram page" href="https://www.instagram.com/rainfallsprings/">
                 <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
             </a>
     </section>
     <section id="Nicholas">
-        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHZ7J02-18161f75373b-512">
-        <p id="below">This is Nicholas, one of our React 1s!</p> 
-            <a href="https://github.com/niko831">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012JHZ7J02-18161f75373b-512" alt="face of a gleeful man named Nicholas with short black hair on a white background.">
+        <p class="belowImage">This is Nicholas, one of our React 1s!</p> 
+            <a aria-label="Link that sends you to Nicholas's github page" href="https://github.com/niko831">
                 <i class="fa fa-github fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://www.linkedin.com/in/nicholas-nobida-pedrano-2923321a8/">
+            <a aria-label="Link that'll sends you to Nicholas's LinkedIn page" href="https://www.linkedin.com/in/nicholas-nobida-pedrano-2923321a8/">
                 <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://www.facebook.com/niko.nobida">
+            <a aria-label="Link that'll sends you to Nicholas's facebook page" href="https://www.facebook.com/niko.nobida">
                 <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
             </a>
-            <a href="https://www.instagram.com/niko831/">
+            <a aria-label="Link that'll sends you to Nicholas's instagram page" href="https://www.instagram.com/niko831/">
                 <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
             </a>
     </section>
     <section id="Stephanie">    
-        <img src="https://ca.slack-edge.com/ESZCHB482-W012R4ECTUL-f9e8c93feaa5-512">
-        <p id="below">This is Stephanie, one of our React 1s!</p> 
-            <a href="https://github.com/stephaniegatt">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012R4ECTUL-f9e8c93feaa5-512" alt="face of a young woman named Stephanie smiling at an angle with glasses and an abundance of pink flowers in the background.">
+        <p class="belowImage">This is Stephanie, one of our React 1s!</p> 
+            <a aria-label="Link that sends you to Stephanie's github page" href="https://github.com/stephaniegatt">
             <i class="fa fa-github fa-3x" aria-hidden="true"></i>
             </a> 
     </section>
     <section id="Francisco">
-        <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY5GP6-8986b6f933c4-512">
-        <p id="below">This is Francisco, one of our React 2s!</p> 
-            <a href="http://github.com/shighetari">
+        <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY5GP6-8986b6f933c4-512" alt="picture of a man named Francisco siiting down on a wooden log hands holding one another with a leafless forest background.">
+        <p class="belowImage">This is Francisco, one of our React 2s!</p> 
+            <a aria-label="Link that sends you to Francisco's github page" href="http://github.com/shighetari">
                 <i class="fa fa-github fa-3x" aria-hidden="true"></i>
            </a>
            </div>
