--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
   </head>
+<main>
 <body>
     <header>
         <nav class="links">
                 <h1>Secret Family Recipes</h1>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="#">Recipes</a>
+                <a aria-label="Home Page" href="index.html">Home</a>
+                <a aria-label="About Page that displays the developers" href="about.html">About</a>
+                <a aria-label="Recipes Page" href="about.html">Recipes</a>
             <!-- <div class="dropdown">
                 <button class="dropbtn">Recipes
                 </button>
@@ -28,17 +29,18 @@
                 <a href="#">Register</a>
             <div class="search-container">
                 <form action="/action_page.php">
-                    <input type="text" placeholder="Search..." name="search">
+                    <input id="searching" type="text" placeholder="Search..." name="search">
+                    <label for="searching">Type in here to search.</label>
                     </form>
                   </div>
         </nav>
     </header>
 <div>
   <nav class="sections">
-    <a href="#"><h3>Breakfast</h3></a>
-    <a href="#"><h3>Appetizers</h3></a>
-    <a href="#"><h3>Dinner</h3></a>
-    <a href="#"><h3>Dessert</h3></a>
+    <a aria-label="Breakfast Page" href="#"><h3>Breakfast</h3></a>
+    <a aria-label="Appetizers Page" href="#"><h3>Appetizers</h3></a>
+    <a aria-label="Dinner Page" href="#"><h3>Dinner</h3></a>
+    <a aria-label="Dessert Page" href="#"><h3>Dessert</h3></a>
   </nav>
 </div>
   <!-- <section class="sidebar">
@@ -66,4 +68,5 @@
 </div>
 </div>
 </body>
+</main>
 </html>
