added read me things and imported image

--- a/about.html
+++ b/about.html
@@ -16,17 +16,8 @@
             <a aria-label="Home Page" href="index.html">Home</a>
             <a aria-label="About Page that displays the developers" href="about.html">About</a>
             <a aria-label="Recipes Page" href="about.html">Recipes</a>
-            <!-- <div class="dropdown">
-                <button class="dropbtn">Recipes 
-                </button>
-                <div class="dropdown-content">
-                  <a href="#">Fancy</a>
-                  <a href="#">Casual</a>
-                  <a href="#">Less for More</a>
-                </div>
-              </div> -->
-                <a href="">Login</a>
-                <a href="">Register</a>
+                <a href="https://secret-family-recipe-front-end.vercel.app">Login</a>
+                <a href="https://secret-family-recipe-front-end.vercel.app">Register</a>
                 <div class="search-container">
                     <form aria-label="search bar" action="/action_page.php">
                       <input id="searching" type="text" alt="type out things that you want to look up" placeholder="Search.." name="search">
