--- a/index.html
+++ b/index.html
@@ -16,17 +16,8 @@
                 <a aria-label="Home Page" href="index.html">Home</a>
                 <a aria-label="About Page that displays the developers" href="about.html">About</a>
                 <a aria-label="Recipes Page" href="about.html">Recipes</a>
-            <!-- <div class="dropdown">
-                <button class="dropbtn">Recipes
-                </button>
-                <div class="dropdown-content">
-                  <a href="#">Fancy</a>
-                  <a href="#">Casual</a>
-                  <a href="#">Less for More</a>
-                </div>
-              </div> -->
-                <a href="#">Login</a>
-                <a href="#">Register</a>
+                <a href="https://secret-family-recipe-front-end.vercel.app">Login</a>
+                <a href="https://secret-family-recipe-front-end.vercel.app">Register</a>
             <div class="search-container">
                 <form action="/action_page.php">
                     <input id="searching" type="text" placeholder="Search..." name="search">
@@ -43,17 +34,6 @@
     <a aria-label="Dessert Page" href="#"><h3>Dessert</h3></a>
   </nav>
 </div>
-  <!-- <section class="sidebar">
-    <h2>Cuisines</h2>
-  <a href="#"><h3 id="sides">Philippines</h3></a>
-  <a href="#"><h3 id="sides">Italian</h3></a>
-  <a href="#"><h3 id="sides">Indian</h3></a>
-  <a href="#"><h3 id="sides">Mexican</h3></a>
-  <a href="#"><h3 id="sides">Korean</h3></a>
-  <a href="#"><h3 id="sides">Moroccan</h3></a>
-  <a href="#"><h3 id="sides">Thai</h3></a>
-  <a href="#"><h3 id="sides">Swedish</h3></a>
-</section> -->
 <div class="midmid">
 <section class="midimage">
     <img id="kitchen" src="https://previews.123rf.com/images/dolgachov/dolgachov1802/dolgachov180201948/96033606-group-of-people-eating-chicken-for-dinner.jpg" alt="various plates with pasta, chicken, fruits and veggies laid on top of a wooden table with an aerial view of people eating or taking a portion of the food on the table">
